# transcribe-transcribe

./: .gitignore  README.md  add_subtitle_to_video.py  indian123.m4a  jax_for_GPU.py  main.py  nepali123.m4a  notes.txt  notes2.txt  output.raw  pyproject.toml  whisper_api.py  whisper_transcribe.py
audio/: ENG AND NEPALI 1.m4a
content/: test1234.vtt
export_slice/text_slice/: compleete_nepali123.txt  complete_timestamp_0122.txt  complete_timestamp_meeting000.vtt  nepali123_0.txt  nepali123_1.txt  no_timestamp_complete_timestamp_0122.txt  no_timestamp_complete_timestamp_meeting000.txt  remove_timestamp.py
